--- a/src/MSetExplorer/MainWindow/MainWindow.xaml
+++ b/src/MSetExplorer/MainWindow/MainWindow.xaml
@@ -17,6 +17,11 @@
         <CommandBinding Command="local:CustomCommands.PanUp" CanExecute="Pan_CanExecute" Executed="PanUp_Executed" />
         <CommandBinding Command="local:CustomCommands.PanRight" CanExecute="Pan_CanExecute" Executed="PanRight_Executed" />
         <CommandBinding Command="local:CustomCommands.PanDown" CanExecute="Pan_CanExecute" Executed="PanDown_Executed" />
+
+        <CommandBinding Command="local:CustomCommands.ColorsOpen" CanExecute="ColorsOpenCommand_CanExecute" Executed="ColorsOpenCommand_Executed" />
+        <CommandBinding Command="local:CustomCommands.ColorsSave" CanExecute="ColorsSaveCommand_CanExecute" Executed="ColorsSaveCommand_Executed" />
+        <CommandBinding Command="local:CustomCommands.ColorsSaveAs" CanExecute="ColorsSaveAsCommand_CanExecute" Executed="ColorsSaveAsCommand_Executed" />
+
     </Window.CommandBindings>
 
     <Grid>
@@ -40,11 +45,17 @@
                 <Separator/>
                 <MenuItem Header="_Exit" Click="CloseButton_Click" />
             </MenuItem>
+
+            <MenuItem Header="_Colors">
+                <MenuItem Header="_Open" Command="local:CustomCommands.ColorsOpen" />
+                <MenuItem Header="_Save" Command="local:CustomCommands.ColorsSave" />
+                <MenuItem Header="Save_As" Command="local:CustomCommands.ColorsSaveAs" />
+            </MenuItem>
             
             <MenuItem Header="_Windows">
-                <MenuItem Header="Color Band Editor" IsCheckable="True"/>
-                <MenuItem Header="Calculation Parameters" IsCheckable="True"/>
                 <MenuItem Header="Coordinates" IsCheckable="True"/>
+                <MenuItem Header="Calculation Parameters" IsCheckable="True"/>
+                <MenuItem Header="Color Band Editor" IsCheckable="True"/>
             </MenuItem>
             
             <MenuItem Header="_Map">
