--- a/src/MSetExplorer/ProjectOpenSaveDialog/ProjectOpenSaveWindow.xaml
+++ b/src/MSetExplorer/ProjectOpenSaveDialog/ProjectOpenSaveWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d"
-        Title="Project Open" Height="450" Width="800">
+        Title="Open Project" Height="450" Width="800">
     
     <Grid>
         
