--- a/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
+++ b/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
@@ -5,8 +5,44 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MSetExplorer"
              mc:Ignorable="d" 
-             d:DesignHeight="250" d:DesignWidth="250">
+             d:DesignWidth="200">
+
+    <!--d:DesignHeight="250" d:DesignWidth="250"-->
     <Grid>
-            
+        
+        <Grid Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="45" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <!--<RowDefinition Height="*" />-->
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="Start X:" Grid.Row="0" Margin="0,7,0,3" Height="21" />
+            <TextBox x:Name="tbStartX" Grid.Row="0" Grid.Column="1" Margin="3" Text="{Binding CurJob.MSetInfo.Coords.X1}"/>
+
+            <TextBlock Text="End X:" Grid.Row="1" Margin="0,7,0,3" Height="21" />
+            <TextBox x:Name="tbEndX" Grid.Row="1" Grid.Column="1" Margin="3" />
+
+            <TextBlock Text="Start Y:" Grid.Row="2" Margin="0,7,0,3" Height="21" />
+            <TextBox x:Name="tbStartY" Grid.Row="2" Grid.Column="1" Margin="3" />
+
+            <TextBlock Text="End Y:" Grid.Row="3" Margin="0,7,0,3" Height="21" />
+            <TextBox x:Name="tbEndY" Grid.Row="3" Grid.Column="1" Margin="3" />
+
+            <!--<Button x:Name="Save" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top" Margin="3"
+                    Width="80" Height="25"
+                    Content="Save" />-->
+        </Grid>
+                        
+                        
     </Grid>
 </UserControl>
