--- a/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
+++ b/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MSetExplorer"
              mc:Ignorable="d" 
-             d:DesignHeight="70" d:DesignWidth="290">
+             d:DesignWidth="290">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -19,14 +19,14 @@
 
             <StackPanel Orientation="Horizontal">
                 <TextBlock Width="65" Margin="5,5,11,3" FontSize="14" Text="Cut Off:" />
-                <TextBox Text="{Binding Path=SelectedColorBand.CutOff}"  Width="50" Height="21" VerticalAlignment="Center" Margin="0,5,0,3"/>
+                <TextBox Text="{Binding Path=CurrentColorBand.CutOff}"  Width="50" Height="21" VerticalAlignment="Center" Margin="0,5,0,3"/>
 
-                <TextBlock Width="77" Margin="8,3,5,3" FontSize="14" Text="Blend Style:" />
+                <TextBlock Width="77" Margin="8,5,5,3" FontSize="14" Text="Blend Style:" />
 
                 <!--<TextBox Text="{Binding Path=SelectedColorBand.BlendStyle}"  Width="67" VerticalAlignment="Center"/>-->
 
                 <ComboBox Width="64" Height="21" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,2,0,2"
-                            SelectedIndex="{Binding Path=SelectedColorBand.BlendStyle, Converter={StaticResource BlendStyleToIntConverter}}">
+                            SelectedIndex="{Binding Path=CurrentColorBand.BlendStyle, Converter={StaticResource BlendStyleToIntConverter}}">
                     <ComboBoxItem IsSelected="True">None</ComboBoxItem>
                     <ComboBoxItem>End</ComboBoxItem>
                     <ComboBoxItem>Next</ComboBoxItem>
@@ -36,12 +36,12 @@
 
             <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                 <TextBlock Width="69" Margin="5,2,5,5" FontSize="14" Text="Start Color:" />
-                <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=SelectedColorBand.StartColor}" Width="63" Height="21" Margin="2,0,3,5"/>
+                <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=CurrentColorBand.StartColor}" Width="63" Height="21" Margin="2,0,3,5"/>
                 <!--<TextBox Text="{Binding Path=SelectedColorBand.StartColor.CssColor}" Width="65" VerticalAlignment="Center"/>-->
 
                 <TextBlock Width="65" Margin="5,2,5,5" FontSize="14" Text="End Color:" />
                 <!--<TextBox Text="{Binding Path=SelectedColorBand.ActualEndColor.CssColor}"  Width="65" VerticalAlignment="Center"/>-->
-                <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=SelectedColorBand.ActualEndColor}" Width="63" Height="21" Margin="0,0,0,5"/>
+                <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=CurrentColorBand.ActualEndColor}" Width="63" Height="21" Margin="0,0,0,5"/>
             </StackPanel>
 
         </StackPanel>
